# rust-cli

./: Cargo.toml  README.md  my.txt
src/: calculator.rs  grep.rs  lib.rs  loader.rs  main.rs
tests/: calculator.rs  cli.rs  grep.rs  tests.rs
