[package]
name = "grrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17.8"
assert_fs = "1.1.1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
